# snatch

./: .gitignore  Cargo.toml  README.md  build.rs  scraper.toml  settings.toml
docs/: guide.md  rule-engine-plan.md  source-format.md
examples/: scraper.toml
sources/: blog-xbookcn.toml  caoliu-image.toml  caoliu-novel.toml  dll-files.toml  photos18.toml  sosing.toml  xx-book.toml
src/: clipboard.rs  config.rs  crawler.rs  db.rs  download.rs  main.rs  state.rs  tui.rs  util.rs
