[package]
name = "snatch"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
wreq = { version = "6.0.0-rc.29", features = ["cookies", "gzip", "deflate", "brotli", "zstd"] }
wreq-util = "3.0.0-rc"
scraper = "0.22"
zhconv = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
arboard = "3"
dirs = "6"
num_cpus = "1"
url = "2"
ratatui = "0.29"
clipboard-master = "4.0.0"
serde_json = "1.0.150"
serde_json_path = "0.7.2"
skyscraper = "0.7.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
boa_engine = "0.21.1"

[profile.release]
opt-level = "s"       # size optimization
lto = true            # link-time optimization
codegen-units = 1     # better optimization
strip = true          # remove debug symbols
panic = "abort"       # smaller panic handler
